tests/errors/arguments/variables/invalid_frame_03.src
.IPPcode18
defvar 9TF@var